Docker, makefile and entrypoints configured

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: workflow
+
+  workflow-tests:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: workflow-tests
+    depends_on:
+      - workflow
