--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,5 @@
+steps:
+
 - name: 'gcr.io/cloud-builders/docker'
   id: 'build test image'
   args: ['build', '-t', 'workflow-tests', '--target', 'workflow-tests', '.']
