--- a/cloudbuild.tests.yaml
+++ b/cloudbuild.tests.yaml
@@ -27,22 +27,25 @@ steps:
 #   args: ['run', 'workflow-tests']
 
 # Tag image to GCR for caching later?
-- name: 'bash'
+- name: 'gcr.io/cloud-builders/docker'
   id: 'Build test image'
+  entrypoint: 'bash'
   args:
   - '-c'
   - |
     make build-ci SERVICE=workflow-tests
 
-- name: 'bash'
+- name: 'gcr.io/cloud-builders/docker'
   id: 'Run tests'
+  entrypoint: 'bash'
   args:
   - '-c'
   - |
     make run-ci SERVICE=workflow-tests
 
-- name: 'bash'
+- name: 'gcr.io/cloud-builders/docker'
   id: 'Tag and push test image'
+  entrypoint: 'bash'
   args:
   - '-c'
   - |
