--- a/cloudbuild.tests.yaml
+++ b/cloudbuild.tests.yaml
@@ -24,12 +24,12 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   id: 'build test image'
   entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    source /workspace/.env
-    docker build workflow-tests
-  # args: ['build', 'workflow-tests']
+  # args:
+  # - '-c'
+  # - |
+  #   source /workspace/.env
+  #   docker build workflow-tests
+  args: ['build', 'workflow-tests']
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'run tests'
