--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       dockerfile: Dockerfile
       target: workflow
     args:  # build time variables
-      - IMAGE_REGISTRY
+      - ENV  # to build correct image and load correct env vars
+      - IMAGE_REGISTRY  # to build image correctly
     cache_from:
       # - ${IMAGE_REGISTRY}/workflow:${CACHE_TAG}  # GCR latest build related to a branch?
       - ${IMAGE_REGISTRY}/workflow:latest  # GCR latest build prod image
@@ -22,7 +23,8 @@ services:
       dockerfile: Dockerfile
       target: workflow-tests
     args:  # build time variables
-      - IMAGE_REGISTRY
+      - ENV  # to build correct image
+      - IMAGE_REGISTRY  # to tag image correctly
     cache_from:
       # - ${IMAGE_REGISTRY}/workflow-tests:${CACHE_TAG}  # GCR latest build related to a branch?
       - ${IMAGE_REGISTRY}/workflow-tests:latest  # GCR latest build test image
