--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
   - |
     source vars/build/default.env
     source vars/build/prod.env
-    docker-compose build workflow-tests
+    ENV=$ENV IMAGE_REGISTRY=$IMAGE_REGISTRY docker build workflow-tests
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'run tests'
