--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,13 +4,13 @@ steps:
   id: 'rm docker-compose.override.yml to rm volumes'
   args: ['rm', 'docker-compose.override.yml']
 
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'docker/compose'
   id: 'build test image'
   # args: ['build', '-t', 'workflow-tests', '--target', 'workflow-tests', '.']
   args:
   - '-c'
   - |
-    -f docker-compose.yml build workflow-tests .
+    docker-compose build workflow-tests
   # entrypoint: 'bash'
   # args:
   # - '-c'
