--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,10 +4,10 @@ steps:
   id: 'rm docker-compose.override.yml to rm volumes'
   args: ['rm', 'docker-compose.override.yml']
 
-- name: 'docker/compose'
+- name: 'gcr.io/cloud-builders/docker'
   id: 'build test image'
   # args: ['build', '-t', 'workflow-tests', '--target', 'workflow-tests', '.']
-  args: ['build', 'workflow-tests']
+  args: ['compose' ,'build', 'workflow-tests']
   # entrypoint: 'bash'
   # args:
   # - '-c'
