--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     # args:  # build time variables
       # - ENV  # to build correct image and load correct env vars
       # - IMAGE_REGISTRY  # to build image correctly
-    cache_from:
+    # cache_from:
       # - ${IMAGE_REGISTRY}/workflow:${CACHE_TAG}  # GCR latest build related to a branch?
-      - ${IMAGE_REGISTRY}/workflow:latest  # GCR latest build prod image
+      # - ${IMAGE_REGISTRY}/workflow:latest  # GCR latest build prod image
     env_file:
       - ./vars/env/default.env
       - ./vars/env/{ENV}.env
@@ -25,10 +25,10 @@ services:
     # args:  # build time variables
     #   - ENV  # to build correct image
     #   - IMAGE_REGISTRY  # to tag image correctly
-    cache_from:
+    # cache_from:
       # - ${IMAGE_REGISTRY}/workflow-tests:${CACHE_TAG}  # GCR latest build related to a branch?
-      - ${IMAGE_REGISTRY}/workflow-tests:latest  # GCR latest build test image
-      - ${IMAGE_REGISTRY}/workflow:latest  # GCR latest build image
+      # - ${IMAGE_REGISTRY}/workflow-tests:latest  # GCR latest build test image
+      # - ${IMAGE_REGISTRY}/workflow:latest  # GCR latest build image
     depends_on:
       - workflow
     env_file:
