--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   id: 'build test image'
   # args: ['build', '-t', 'workflow-tests', '--target', 'workflow-tests', '.']
-  args: ['compose', 'build', 'workflow-tests']
+  args: ['compose*', 'build', 'workflow-tests']
   # entrypoint: 'bash'
   # args:
   # - '-c'
