--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,20 +8,20 @@ steps:
   id: 'view options'
   args: ['compose*', '--help']
 
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'build test image'
-  # args: ['build', '-t', 'workflow-tests', '--target', 'workflow-tests', '.']
-  args: ['compose*', 'build', 'workflow-tests']
-  # entrypoint: 'bash'
-  # args:
-  # - '-c'
-  # - |
-  #   source vars/build/default.env
-  #   source vars/build/prod.env
-  #   ENV=$$ENV IMAGE_REGISTRY=$$IMAGE_REGISTRY docker build workflow-tests
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'build test image'
+#   # args: ['build', '-t', 'workflow-tests', '--target', 'workflow-tests', '.']
+#   args: ['compose*', 'build', 'workflow-tests']
+#   # entrypoint: 'bash'
+#   # args:
+#   # - '-c'
+#   # - |
+#   #   source vars/build/default.env
+#   #   source vars/build/prod.env
+#   #   ENV=$$ENV IMAGE_REGISTRY=$$IMAGE_REGISTRY docker build workflow-tests
 
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'run tests'
-  args: ['run', 'workflow-tests']
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'run tests'
+#   args: ['run', 'workflow-tests']
 
 # STAGES
