--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,14 +14,18 @@ steps:
 
 - name: 'docker'
   id: 'Build test image'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    source /workspace/.env
-    docker compose build workflow-tests
+  args: ['compose', 'build', 'workflow-tests']
 
-- name: 'docker'
+# - name: 'docker'
+#   id: 'Build test image'
+#   entrypoint: 'bash'
+#   args:
+#   - '-c'
+#   - |
+#     source /workspace/.env
+#     docker compose build workflow-tests
+
+- name: 'gcr.io/cloud-builders/docker'
   id: 'Run tests'
   args: ['compose', 'run', 'workflow-tests']
 
