--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,7 +21,7 @@ steps:
   args:
   - '-c'
   - |
-    tag workflow-tests $PROJECT_ID/workflow-tests:latest
+    tag workflow-tests gcr.io/$PROJECT_ID/workflow-tests:latest
 
 images: ['gcr.io/$PROJECT_ID/workflow-tests:latest']
 
