--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,9 +18,7 @@ steps:
 
 - name: 'gcr.io/cloud-builders/docker'
   id: "Tag test image"
-  args: ['tag', '$${COMPOSE_PROJECT_NAME}_workflow-tests:latest' ,'gcr.io/$PROJECT_ID/workflow-tests']
-  env:
-    - 'COMPOSE_PROJECT_NAME=$REPO_NAME'
+  args: ['tag', 'workspace_workflow-tests:latest' ,'gcr.io/$PROJECT_ID/workflow-tests']
 
 images:
   - 'gcr.io/$PROJECT_ID/workflow-tests:latest'
