--- a/cloudbuild.test.yaml
+++ b/cloudbuild.test.yaml
@@ -6,12 +6,12 @@ steps:
   args: ['rm', 'docker-compose.override.yml']
 
 # Build workflow-test image
-- name: 'gcr.io/$PROJECT_ID/docker-compose'
-  id: 'Build test image'
-  args: ['build', 'workflow-tests']
-  env:
-    - 'ENV=prod'
-    - 'IMAGE_REGISTRY=gcr.io/$PROJECT_ID'
+# - name: 'gcr.io/$PROJECT_ID/docker-compose'
+#   id: 'Build test image'
+#   args: ['build', 'workflow-tests']
+#   env:
+#     - 'ENV=prod'
+#     - 'IMAGE_REGISTRY=gcr.io/$PROJECT_ID'
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Build test image'
