--- a/cloudbuild.deploy.yaml
+++ b/cloudbuild.deploy.yaml
@@ -27,7 +27,14 @@ steps:
 
 - name: 'gcr.io/cloud-builders/gsutil'
   id: 'Deploy DAG manifest'
-  args: ['cp', '-r', 'dag-manifest.yaml', '$$GCS_BUCKET/$$DAG_MANIFEST_PATH']
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    echo $$GCS_BUCKET
+    echo $$DAG_MANIFEST_PATH
+    gsutil cp dag-manifest.yaml $$GCS_BUCKET/$$DAG_MANIFEST_PATH
+  # args: ['cp', 'dag-manifest.yaml', '$$GCS_BUCKET/$$DAG_MANIFEST_PATH']
   env:
     - 'GCS_BUCKET=gs://madecom-dev-alex-gregory-sandbox'
     - 'DAG_MANIFEST_PATH=dags/workflow.yaml'
