--- a/cloudbuild.test.yaml
+++ b/cloudbuild.test.yaml
@@ -11,6 +11,7 @@ steps:
   args: ['compose', 'build', 'workflow-tests']
   env:
     - 'ENV=prod'
+    - 'IMAGE_REGISTRY=gcr.io/$PROJECT_ID'
 
 # Run workflow-tests image
 - name: 'docker'
