--- a/cloudbuild.test.yaml
+++ b/cloudbuild.test.yaml
@@ -5,6 +5,15 @@ steps:
   id: 'Delete ancillary docker-compose files'
   args: ['rm', 'docker-compose.override.yml']
 
+- name: 'docker'
+  id: 'pull test image'
+  args: ['pull', '$$/workflow-tests:latest']
+  env:
+    - 'DOCKER_BUILDKIT=1'
+    - 'COMPOSE_DOCKER_CLI_BUILD=1'
+    - 'ENV=prod'
+    - 'IMAGE_REGISTRY=gcr.io/$PROJECT_ID'
+
 # Build workflow-test image
 # - name: 'gcr.io/cloud-builders/docker'
 - name: 'docker'
