--- a/cloudbuild.test.yaml
+++ b/cloudbuild.test.yaml
@@ -7,12 +7,11 @@ steps:
 
 - name: 'docker'
   id: 'pull test image'
-  args: ['pull', '$$IMAGE_REGISTRY/workflow-tests:latest']
+  args: ['pull', 'grc.io/$PROJECT_ID/workflow-tests:latest']
   env:
     - 'DOCKER_BUILDKIT=1'
     - 'COMPOSE_DOCKER_CLI_BUILD=1'
     - 'ENV=prod'
-    - 'IMAGE_REGISTRY=gcr.io/$PROJECT_ID'
 
 # Build workflow-test image
 # - name: 'gcr.io/cloud-builders/docker'
@@ -38,7 +37,7 @@ steps:
 # - name: 'gcr.io/cloud-builders/docker'
 - name: 'docker'
   id: "Tag prod image"
-  args: ['tag', 'workspace_workflow:latest' ,'gcr.io/$PROJECT_ID/workflow']
+  args: ['tag', 'workspace_workflow:latest', 'gcr.io/$PROJECT_ID/workflow']
 
 # Tag workflow-test image
 # - name: 'gcr.io/cloud-builders/docker'
