--- a/cloudbuild.test.yaml
+++ b/cloudbuild.test.yaml
@@ -5,14 +5,6 @@ steps:
   id: 'Delete ancillary docker-compose files'
   args: ['rm', 'docker-compose.override.yml']
 
-- name: 'docker'
-  id: 'pull test image'
-  args: ['pull', 'grc.io/$PROJECT_ID/workflow-tests:latest']
-  env:
-    - 'DOCKER_BUILDKIT=1'
-    - 'COMPOSE_DOCKER_CLI_BUILD=1'
-    - 'ENV=prod'
-
 # Build workflow-test image
 # - name: 'gcr.io/cloud-builders/docker'
 - name: 'docker'
@@ -20,7 +12,7 @@ steps:
   args: ['compose', 'build', 'workflow-tests']
   env:
     - 'DOCKER_BUILDKIT=1'
-    - 'COMPOSE_DOCKER_CLI_BUILD=1'
+    - 'BUILDKIT_INLINE_CACHE=1'  # reuse cache from other builds
     - 'ENV=prod'
     - 'IMAGE_REGISTRY=gcr.io/$PROJECT_ID'
 
