--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       args:
         - BUILDKIT_INLINE_CACHE=1
       cache_from:
-        # - ${IMAGE_REGISTRY}/workflow:${CACHE_TAG}  # GCR latest build related to a branch?
+        - ${IMAGE_REGISTRY}/workflow:${CACHE_TAG}
         - ${IMAGE_REGISTRY}/workflow:latest  # GCR latest build prod image
     env_file:
       - ./vars/env/default.env
@@ -26,7 +26,7 @@ services:
       args:
         - BUILDKIT_INLINE_CACHE=1
       cache_from:
-        # - ${IMAGE_REGISTRY}/workflow-tests:${CACHE_TAG}  # GCR latest build related to a branch?
+        - ${IMAGE_REGISTRY}/workflow-tests:${CACHE_TAG}  # GCR latest build related to a branch?
         - ${IMAGE_REGISTRY}/workflow-tests:latest  # GCR latest build test image
         - ${IMAGE_REGISTRY}/workflow:latest  # GCR latest build image
     depends_on:
