--- a/cloudbuild.test.yaml
+++ b/cloudbuild.test.yaml
@@ -55,5 +55,7 @@ steps:
 # If builds in list below are successful in previous stages, this implicitly pushes them to GCR
 # want to see if this pushes just the latest or all
 images:
-  - 'gcr.io/$PROJECT_ID/workflow'
-  - 'gcr.io/$PROJECT_ID/workflow-tests'
+  - 'gcr.io/$PROJECT_ID/workflow:$BRANCH_NAME.$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/workflow:latest'
+  - 'gcr.io/$PROJECT_ID/workflow-tests:$BRANCH_NAME.$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/workflow-tests:latest'
