--- a/cloudbuild.deploy.yaml
+++ b/cloudbuild.deploy.yaml
@@ -30,10 +30,10 @@ steps:
 # Deploy the DAG manifest
 - name: 'bash'
   id: 'Inject image tag into the DAG manifest'
-  args:
-  - '-c'
-  - |
-    sed -i 's/docker_tag_placeholder/$$CACHE_TAG/g' dag-manifest.yaml
+  args: ['sed', '-i', "'s/docker_tag_placeholder/$$CACHE_TAG/g'", 'dag-manifest.yaml']
+  # - '-c'
+  # - |
+  #   sed -i 's/docker_tag_placeholder/$$CACHE_TAG/g' dag-manifest.yaml
   env:
     - 'CACHE_TAG=$BRANCH_NAME.$SHORT_SHA'
 
