inspecting if tag injected into dag manifest

--- a/cloudbuild.deploy.yaml
+++ b/cloudbuild.deploy.yaml
@@ -30,10 +30,12 @@ steps:
 # Deploy the DAG manifest
 - name: 'bash'
   id: 'Inject image tag into the DAG manifest'
-  args: ['sed', '-i', "'s/docker_tag_placeholder/$$CACHE_TAG/g'", 'dag-manifest.yaml']
-  # - '-c'
-  # - |
-  #   sed -i 's/docker_tag_placeholder/$$CACHE_TAG/g' dag-manifest.yaml
+  args:
+  # args: ['sed', '-i', 's/docker_tag_placeholder/$$CACHE_TAG/g', 'dag-manifest.yaml']
+  - '-c'
+  - |
+    sed -i 's/docker_tag_placeholder/$$CACHE_TAG/g' dag-manifest.yaml
+    cat dag-manifest.yaml
   env:
     - 'CACHE_TAG=$BRANCH_NAME.$SHORT_SHA'
 
