--- a/cloudbuild.deploy.yaml
+++ b/cloudbuild.deploy.yaml
@@ -34,7 +34,7 @@ steps:
   # args: ['sed', '-i', 's/docker_tag_placeholder/$$CACHE_TAG/g', 'dag-manifest.yaml']
   - '-c'
   - |
-    sed -i 's/docker_tag_placeholder/$$CACHE_TAG/g' dag-manifest.yaml
+    sed -i "s/docker_tag_placeholder/$$CACHE_TAG/g" dag-manifest.yaml
     cat dag-manifest.yaml
   env:
     - 'CACHE_TAG=$BRANCH_NAME.$SHORT_SHA'
